# fafafa

./: README.md  index.css  main.py  pyproject.toml
modules/: window.py
modules/runner/: runner.py
plugins/: apps.py  base.py  quick_links.py  registry.py
shared/: icons.py
styles/: runner.css
